--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bryan Covell</title>
     <!-- Add your CSS stylesheets and other meta tags here -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header>
@@ -16,11 +18,15 @@
         </nav>
     </header>
 
-    <section class="profile">
-        <img src="{{ url_for('static', filename='images/beach_profile.jpeg') }}" alt="Profile Picture" class="profile-photo">
-        <div class="profile-text">
-            <h1>Bryan Covell</h1>
-            <p>Discover my work, skills, and achievements.</p>
+    <section class="container profile">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="{{ url_for('static', filename='images/beach_profile.jpeg') }}" alt="Profile Picture" class="img-fluid rounded-circle">
+            </div>
+            <div class="col-md-6">
+                <h1>Bryan Covell</h1>
+                <p>Discover my work, skills, and achievements.</p>
+            </div>
         </div>
     </section>
 
