--- a/templates/index.html
+++ b/templates/index.html
@@ -19,21 +19,20 @@
     </header>
 
     <section class="container profile">
-        <div class="row">
+        <div class="row align-items-center">
             <div class="col-md-6">
-                <img src="{{ url_for('static', filename='images/beach_profile.jpeg') }}" alt="Profile Picture" class="img-fluid rounded-circle">
+                <img src="{{ url_for('static', filename='images/beach_profile.jpeg') }}" alt="Profile Picture" class="img-fluid rounded-circle" style="max-width: 500px; max-height: 500px;">
             </div>
             <div class="col-md-6">
                 <h1>Bryan Covell</h1>
-                <p>Discover my work, skills, and achievements.</p>
+                <p>{{ bio_content }}</p>
             </div>
         </div>
     </section>
 
-    <footer>
-        <p>&copy; 2023 Bryan Covell</p>
-    </footer>
+<!--    <footer>-->
+<!--        <p>&copy; 2023 Bryan Covell</p>-->
+<!--    </footer>-->
 
-    <!-- Add your JavaScript scripts and other resources here -->
 </body>
 </html>
