--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
+    <nav class="navbar navbar-expand-lg bg-primary">
+        <div class="container mx-2">
             <!-- Home button on the left -->
             <a class="navbar-brand" href="/">Bryan Covell</a>
 
@@ -22,22 +22,17 @@
         </div>
     </nav>
 
-    <section class="container profile mx-auto">
-        <div class="row align-items-center">
-            <div class="col text-center">
-                <img src="{{ url_for('static', filename='images/beach_profile.jpeg') }}" alt="Profile Picture" class="img-fluid rounded-circle" style="max-width: 500px; max-height: 500px;">
-            </div>
+    <div class="container profile">
+        <div class="col text-center">
+            <img src="{{ url_for('static', filename='images/beach_profile.jpeg') }}" alt="Profile Picture" class="img-fluid rounded-circle my-3" style="max-width: 500px; max-height: 500px;">
+
+            <h1 class="mt-0">Bryan Covell</h1>
+            <p>{{ bio_content }}</p>
         </div>
-        <div class="row align-items-center">
-            <div class="col text-center">
-                <h1 class="mt-4">Bryan Covell</h1>
-                <p>{{ bio_content }}</p>
-            </div>
-        </div>
-    </section>
+    </div>
 
 
-    <footer class="fixed-bottom">
+    <footer class="fixed-bottom mx-3">
         <p>&copy; 2023 Bryan Covell</p>
     </footer>
 
