--- a/templates/index.html
+++ b/templates/index.html
@@ -1,40 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bryan Covell</title>
-    <!-- Add your CSS stylesheets and other meta tags here -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+{% extends "base.html" %}
 
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-primary">
-        <div class="container mx-2">
-            <!-- Home button on the left -->
-            <a class="navbar-brand" href="/">Bryan Covell</a>
+{% block content %}
+<div class="container profile">
+    <div class="col text-center">
+        <img src="{{ url_for('static', filename='images/beach_profile.jpeg') }}" alt="Profile Picture" class="img-fluid rounded-circle my-3" style="max-width: 500px; max-height: 500px;">
 
-            <!-- Space for tabs on the right (placeholder) -->
-            <div class="navbar-collapse justify-content-end">
-                <!-- Tabs will go here -->
-            </div>
-        </div>
-    </nav>
-
-    <div class="container profile">
-        <div class="col text-center">
-            <img src="{{ url_for('static', filename='images/beach_profile.jpeg') }}" alt="Profile Picture" class="img-fluid rounded-circle my-3" style="max-width: 500px; max-height: 500px;">
-
-            <h1 class="mt-0">Bryan Covell</h1>
-            <p>{{ bio_content }}</p>
-        </div>
+        <h1 class="mt-0">Bryan Covell</h1>
+        <p>{{ bio_content }}</p>
     </div>
-
-
-    <footer class="fixed-bottom mx-3">
-        <p>&copy; 2023 Bryan Covell</p>
-    </footer>
-
-</body>
-</html>
+</div>
+{% endblock %}
