--- a/templates/base.html
+++ b/templates/base.html
@@ -1,36 +1,48 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bryan Covell</title>
     <!-- Add your CSS stylesheets and other meta tags here -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg bg-primary">
-        <div class="container-sm mx-2">
-            <!-- Home button on the left -->
-            <a class="navbar-brand" href="/">
-                <img src="{{ url_for('static', filename='images/signature.png') }}" alt="signature" width="auto" height="30px">
-            </a>
+      <div class="container-sm mx-2">
+        <!-- Home button on the left -->
+        <a class="navbar-brand" href="/">
+          <img
+            src="{{ url_for('static', filename='images/signature.png') }}"
+            alt="signature"
+            width="auto"
+            height="30px"
+          />
+        </a>
 
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/experience">Experience</a>
-                </li>
-            </ul>
-        </div>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/experience">Experience</a>
+          </li>
+        </ul>
+      </div>
     </nav>
 
     <!-- Content specific to each page will be included here -->
     {% block content %}{% endblock %}
 
     <footer class="fixed-bottom mx-3">
-        <p>&copy; 2023 Bryan Covell</p>
+      <p>&copy; 2023 Bryan Covell</p>
     </footer>
-
-</body>
+  </body>
 </html>
