--- a/templates/experience.html
+++ b/templates/experience.html
@@ -1,5 +1,3 @@
-{% extends "base.html" %}
-
-{% block content %}
+{% extends "base.html" %} {% block content %}
 <!-- Content specific to the experience page goes here -->
 {% endblock %}
