--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-primary">
-      <div class="container-sm mx-2">
+      <div class="container-sm">
         <!-- Home button on the left -->
         <a class="navbar-brand" href="/">
           <img
@@ -34,6 +34,12 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="/experience">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/learning">Learning</a>
           </li>
         </ul>
       </div>
